--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "prop-types": "latest"
   },
   "scripts": {
     "predeploy": "npm run build",
